# nix-up

./: .gitignore  .sops.yaml  :wq  README.md  debug.sh  eus systemd[2290]: Stopping Clammy - Clamshell mode daemon for Sway...  flake.nix  my_changes.patch  nixup.sh  perseus.sh  src  user-config.nix
.github/workflows/: nix-up.yaml  perseus.yaml  trufflehog.yaml
configs/i3status-rust-config/: config.toml
configs/librewolf/: autoconfig.js  librewolf.cfg  policies.json
configs/rofi-config/: config.rasi  quick-apps.sh
configs/sway-config/: config
configs/waybar-config/: config.json  style.css
home/: default.nix
modules/: app-telemetry-deny.nix  clammy.nix  dms.nix  environment.nix  firejail.nix  flatpak.nix  gammastep.nix  gpl.nix  greetd.nix  i3.nix  librewolf.nix  lightdm.nix  niri.nix  nixvim.nix  notify.nix  nvidia.nix  privacy.nix  secrets.nix  ssh-add-keys.nix  ssh-config.nix  steam.nix  sway.nix  system-packages.nix  techoverlord_protection.nix  thunderbolt-ethernet.nix  tuigreeter.nix  usb.nix  vpn.nix  zsh.nix
pkgs/: clammy.nix  librewolf-with-policies.nix  ntl-tray.nix  perseus-net.nix  sandboxed-frontend.nix  sandboxed-slack.nix  sandboxed-spotify.nix  sandboxed-steam.nix  sandboxed-stremio.nix  sandboxed-teams.nix
programs/clammy/: Cargo.toml
programs/clammy/src/: commands.rs  config.rs  idle.rs  main.rs  state.rs  sway.rs  wayland_idle.rs  wayland_lock.rs  wayland_manager.rs  wayland_output.rs
programs/clammy/src/actions/: clamshell.rs  dim.rs  dpms.rs  lid_open.rs  lock.rs  mod.rs
secrets/: wireguard.yaml
system/: configuration.nix
(+43 files in other folders)
