[package]
name = "clammy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
futures-util = "0.3"

tokio = { version = "1", features = ["full"] }
zbus = "3" 

wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

polling = "3.7"
