[package]
name = "clammy"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use the version matching your NixOS release
niri-ipc = "25.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.2", features = ["client"] }

zbus = { version = "4.0", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"

anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.0", features = ["derive"] }
polling = "3.1"
